--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://www.barbellprojects.com",
+  "proxy": "http://norcalrecords.barbellprojects.com",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
