--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "cors-anywhere": "^0.4.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-spinners": "0.17.0",
-    "react-router-dom": "^6.14.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yaml": "^2.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
