--- a/fly.toml
+++ b/fly.toml
@@ -21,3 +21,7 @@ primary_region = 'iad'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[env]
+  APP_NAME = "Records Exploprer"
+  LOG_LEVEL = "info"
