--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-spinners": "0.17.0",
-    "web-vitals": "^2.1.4",
-    "yaml": "^2.8.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
