--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "body-parser": "^2.2.1",
-    "express": "^5.2.1",
+    "express": "4.21.2",
     "express-pino-logger": "^7.0.0",
     "node-env-run": "^4.0.2",
     "nodemon": "^3.1.11",
